# QDocumentTabWidget

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt  main.cpp  window.cpp  window.hpp
include/QDocumentTabWidget/: QDocumentTabWidget  basedocumenttabitemwidget.h  qdocumenttabbarwidget.h  qdocumenttabitemwidget.h  qdocumenttabwidget.h
src/: CMakeLists.txt  basedocumenttabitemwidget.cpp  qdocumenttabbarwidget.cpp  qdocumenttabitemwidget.cpp  qdocumenttabwidget.cpp
